# gh_release

./: .gitignore  404.html  CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: _docs.yml  _linting.yml  _setup_poetry.yml  _test.yml  _upload.yml  deploy.yml  release.yml  setup.yml  tests.yml
api/cli/: index.html
changelog/: index.html
docs/: usage.md
docs/api/: cli.md
gh_release/: cli.py
license/: index.html
search/: search_index.json
tests/: test_cli.py  test_gh_release.py
usage/: index.html
