[tool.poetry]
name = "gh_release"
version = "0.3.0"
description = ""
authors = ["Nigel Metheringham <nigel.metheringham@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
python-semantic-release = "^7.23.0"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.8"
mkdocstrings = "^0.17.0"
tiangolo-markdown-include = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gh_release = "gh_release.cli:gh_release"

[tool.semantic_release]
branch = "main"
version_toml = [ "pyproject.toml:tool.poetry.version" ]
version_pattern = [
    'README.md:Version: `(\d+\.\d+\.\d+)`',
    'gh_release/__init__.py:__version__ = "(\d+\.\d+\.\d+)"',
]
version_source = "tag"
commit_version_number = true
patch_without_tag = false
build_command = "poetry build"
upload_to_pypi = false
check_build_status = false
upload_to_repository = false
upload_to_release = true

# end
